  * add missing build_requires on File::Touch

  [ gregor herrmann ]
  * Remove PREFIX from debhelper5 debian/rules templates, which won't work
    with Perl 5.10.1 anymore (cf. #545904).
  * Re-add "NO_NETWORK=1" to tests in debian/rules, got lost somewhere.
  * Call dh with "--buildsystem=perl_build", otherwise dh_auto_install gets
    confused by the existing Makefile.PL without a Makefile.

 -- Ryan Niebur <ryanryan52@gmail.com>  Wed, 02 Sep 2009 23:04:47 -0700

dh-make-perl (0.59) unstable; urgency=low

  [ Damyan Ivanov ]
  * debian/rules: compact to (almost) 3 lines

  [ Salvatore Bonaccorso ]
  * Bump Standards-Version to 3.8.3 (dh-make-perl, tests and generated
    packages).
    - The requirement for Perl modules to have a versioned Depend and
      Build-Depend on perl >= 5.6.0-16 has been removed.
  * t/Control.t: Adjust use of perl dependency in Build-Depends-Indep
    filed generated for test. Use Standards-Version 3.8.3 in generated
    `real' control file too.
  * lib/Debian/Control/FromCPAN.pm: get rid of the min_perl_version 
    constant use. 

 -- Damyan Ivanov <dmn@debian.org>  Mon, 17 Aug 2009 20:30:25 +0300

dh-make-perl (0.58) unstable; urgency=low

  [ gregor herrmann ]
  * POD: add a notice that --notest was removed and the new way to skip tests
    is to add nocheck to the DEB_BUILD_OPTIONS environment variable
    (closes: #536733).

  [ Ansgar Burchardt ]
  * fix two typos in the documentation

  [ Damyan Ivanov ]
  * t/core-modules.t: add a bogus module test
  * corelist.t: do not iterate over modules in /usr/share|lib/perl/$VER
    some of the modules there aren't core, notably
    CPANPLUS::Config::System. Closes: #536989

 -- Damyan Ivanov <dmn@debian.org>  Tue, 04 Aug 2009 18:11:45 +0300

dh-make-perl (0.57) unstable; urgency=low

  [ Nathan Handler ]
  * Bump Standards-Version to 3.8.2
    + in debian/control (no changes needed)
    + in generated package's debian/control
    + in t/dists

  [ gregor herrmann ]